--- a/test.ipynb
+++ b/test.ipynb
@@ -2,56 +2,169 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/nikhilwoodruff/policyengine/obr-forecast/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "year: 2026, cumulative_earnings_growth: 1\n",
+      "year: 2027, cumulative_earnings_growth: 1.02\n",
+      "year: 2028, cumulative_earnings_growth: 1.0404\n",
+      "year: 2029, cumulative_earnings_growth: 1.061208\n",
+      "year: 2030, cumulative_earnings_growth: 1.08243216\n"
      ]
     }
    ],
    "source": [
-    "from api.utils.forecast import *"
+    "from policyengine import Simulation\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from microdf import MicroDataFrame\n",
+    "\n",
+    "START_YEAR = 2026\n",
+    "COUNT_YEARS = 5\n",
+    "FORECAST_YEARS = list(range(START_YEAR, START_YEAR + COUNT_YEARS))\n",
+    "\n",
+    "GROWFACTORS = {\n",
+    "    \"earned_income\": {\n",
+    "        2026: 0.02,\n",
+    "        2027: 0.02,\n",
+    "        2028: 0.02,\n",
+    "        2029: 0.02,\n",
+    "        2030: 0.02,\n",
+    "    },\n",
+    "    \"mixed_income\": {\n",
+    "        2026: 0.02,\n",
+    "        2027: 0.02,\n",
+    "        2028: 0.02,\n",
+    "        2029: 0.02,\n",
+    "        2030: 0.02,\n",
+    "    },\n",
+    "    \"capital_income\": {\n",
+    "        2026: 0.02,\n",
+    "        2027: 0.02,\n",
+    "        2028: 0.02,\n",
+    "        2029: 0.02,\n",
+    "        2030: 0.02,\n",
+    "    },\n",
+    "    \"inflation\": {\n",
+    "        2026: 0.02,\n",
+    "        2027: 0.02,\n",
+    "        2028: 0.02,\n",
+    "        2029: 0.02,\n",
+    "        2030: 0.02,\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "\n",
+    "def get_cumulative_growth(base_year: int, target_year: int, growth_rates: dict) -> float:\n",
+    "    cumulative_growth = 1\n",
+    "    for year in range(base_year + 1, target_year + 1):\n",
+    "        cumulative_growth *= (1 + growth_rates[year])\n",
+    "    return cumulative_growth\n",
+    "\n",
+    "subsample = None\n",
+    "growfactors = GROWFACTORS\n",
+    "\n",
+    "simulation = Simulation(\n",
+    "    country=\"uk\",\n",
+    "    scope=\"macro\",\n",
+    "    subsample=subsample,\n",
+    ").baseline_simulation\n",
+    "\n",
+    "for year in FORECAST_YEARS:\n",
+    "    # Update household data\n",
+    "    cumulative_earnings_growth = get_cumulative_growth(START_YEAR, year, growfactors[\"earned_income\"])\n",
+    "    print(f\"year: {year}, cumulative_earnings_growth: {cumulative_earnings_growth}\")\n",
+    "    simulation.set_input(\n",
+    "        \"employment_income\",\n",
+    "        year,\n",
+    "        simulation.calculate(\"employment_income\", START_YEAR) * get_cumulative_growth(START_YEAR, year, growfactors[\"earned_income\"]),\n",
+    "    )\n",
+    "    simulation.set_input(\n",
+    "        \"self_employment_income\",\n",
+    "        year,\n",
+    "        simulation.calculate(\"self_employment_income\", START_YEAR) * get_cumulative_growth(START_YEAR, year, growfactors[\"mixed_income\"]),\n",
+    "    )\n",
+    "    simulation.set_input(\n",
+    "        \"dividend_income\",\n",
+    "        year,\n",
+    "        simulation.calculate(\"dividend_income\", START_YEAR) * get_cumulative_growth(START_YEAR, year, growfactors[\"capital_income\"]),\n",
+    "    )\n",
+    "    simulation.set_input(\n",
+    "        \"consumption\",\n",
+    "        year,\n",
+    "        simulation.calculate(\"consumption\", START_YEAR) * get_cumulative_growth(START_YEAR, year, growfactors[\"inflation\"]),\n",
+    "    )\n",
+    "\n",
+    "    # Update government policy parameters\n",
+    "    cpi_parameter = simulation.tax_benefit_system.parameters.gov.obr.consumer_price_index\n",
+    "    cpi_parameter.update(\n",
+    "        period=f\"year:{year}:1\",\n",
+    "        value=cpi_parameter(2025) * get_cumulative_growth(2025, year, growfactors[\"inflation\"]),\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "df = pd.DataFrame()\n",
+    "for year in range(2025, START_YEAR + COUNT_YEARS):\n",
+    "    year_df = simulation.calculate_dataframe([\n",
+    "        \"household_id\",\n",
+    "        \"household_weight\",\n",
+    "        \"household_count_people\",\n",
+    "        \"household_income_decile\",\n",
+    "        \"household_net_income\",\n",
+    "        \"employment_income\",\n",
+    "        \"self_employment_income\",\n",
+    "        \"dividend_income\",\n",
+    "        \"consumption\",\n",
+    "        \"in_poverty\",\n",
+    "    ], period=year).reset_index()\n",
+    "    year_df[\"year\"] = year\n",
+    "    df = pd.concat([\n",
+    "        df,\n",
+    "        year_df,\n",
+    "    ])\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = get_dataframe(subsample=1000, growfactors=GROWFACTORS)"
+    "from microdf import MicroDataFrame\n",
+    "\n",
+    "df = MicroDataFrame(df, weights=\"household_weight\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "year\n",
-       "2025    3.205231e+06\n",
-       "2026    1.354523e+06\n",
-       "2027    1.364511e+06\n",
-       "2028    1.366139e+06\n",
-       "2029    1.374657e+06\n",
-       "2030    1.254756e+06\n",
+       "2025    1.589477e+12\n",
+       "2026    1.642204e+12\n",
+       "2027    1.688124e+12\n",
+       "2028    1.732616e+12\n",
+       "2029    1.776034e+12\n",
+       "2030    1.805807e+12\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby(\"year\").in_poverty.sum()"
+    "df.groupby(\"year\").household_net_income.sum()"
    ]
   }
  ],
